--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <ul>
     <li><a href="navbar.html">Navbar</a></li><br/>
-    <li><a href="navbar.html">Navbar</a></li><br/>
+    <li><a href="footer.html">Footer</a></li><br/>
     <li><a href="navbar.html">Navbar</a></li><br/>
     <li><a href="navbar.html">Navbar</a></li><br/>
     <li><a href="navbar.html">Navbar</a></li><br/>
