--- a/footer.html
+++ b/footer.html
@@ -7,6 +7,48 @@
 </head>
 
 <body>
-  <h1>Event<span class="yellow">frite</span> UI kit</h1>
+  <h1>
+    <a href="index.html" class="text-dark">Event<span class="yellow">frite</span></a> footer &#x1f447</h1>
+
+
+  <!-- Footer -->
+<footer class="page-footer pt-4">
+  <div class="container-fluid text-center text-md-center bg-dark">
+    <div class="container">
+      <div class="row container d-flex justify-content-around">
+        <hr class="clearfix w-100 d-md-none pb-3">
+        <div class="d-flex justify-content-around">
+          <ul class="list-unstyled">
+            <br/>
+            <li>
+              <a href="#!" class="text-dark">What we do</a>
+            </li>
+          </ul>
+        </div>
+        <div class="d-flex justify-content-around">
+          <ul class="list-unstyled">
+            <br/>
+            <li>
+              <a href="#!" class="text-dark">Who we are</a>
+            </li>
+          </ul>
+        </div>
+        <div class="d-flex justify-content-around">
+          <ul class="list-unstyled">
+            <br/>
+            <li>
+              <a href="#!" class="text-dark">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div> <!-- end div container -->
+    </div> <!-- end div container-fluid.. -->
+  </div>
+  <div class="space-line bg-light">
+  </div>
+  <div class="footer-copyright text-center py-3 bg-dark">© 2020 Copyright:
+    <a href="#">Event<span class="yellow">frite</span>.com</a>
+  </div>
+</footer>
 </body>
 </html>
