authentication_form page done

--- a/footer.html
+++ b/footer.html
@@ -7,9 +7,7 @@
 </head>
 
 <body>
-  <h1>
-    <a href="index.html" class="text-dark">Event<span class="yellow">frite</span></a> footer &#x1f447</h1>
-
+  <h1><a href="index.html" class="text-dark">Event<span class="yellow">frite</span></a> footer &#x1f447</h1>
 
   <!-- Footer -->
 <footer class="page-footer pt-4">
