--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <ul>
     <li><a href="navbar.html">Navbar</a></li><br/>
     <li><a href="footer.html">Footer</a></li><br/>
-    <li><a href="navbar.html">Navbar</a></li><br/>
+    <li><a href="authentication_form.html">Authenticate</a></li><br/>
     <li><a href="navbar.html">Navbar</a></li><br/>
     <li><a href="navbar.html">Navbar</a></li><br/>
     <li><a href="navbar.html">Navbar</a></li><br/>
