better authentication elements done

--- a/authentication_form.html
+++ b/authentication_form.html
@@ -30,7 +30,7 @@
         <label class="form-check-label" for="exampleCheck1">Se souvenir de moi</label>
       </div>
       <div class="text-center">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-success btn-lg">Connexion</button>
       </div>
     </form>
   </div>
@@ -62,12 +62,56 @@
         <label class="form-check-label" for="exampleCheck1">Se souvenir de moi</label>
       </div>
       <div class="text-center">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-success btn-lg">S'inscrire</button>
       </div>
     </form>
   </div>
 
-  <br/>
+  <br/><br/><br/><br/><br/><br/>
   
+  <!-- FORGOT PASSWORD -->
+  <div class="container" style="width: 28rem;">
+    <form>
+      <div class="text-center">
+        <img src="https://i.etsystatic.com/16964958/r/il/9d6714/1563984079/il_fullxfull.1563984079_pebe.jpg" alt="logo_Eventfrite" width="50px" height="50px" />
+        <h1>Mot de passe oublié</h1>
+      </div>
+      <p>Entrez votre adresse email.</p>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Adresse email</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <small id="emailHelp" class="form-text text-muted">Vous recevrez un email de réctification de mot de passe.</small>
+      </div>
+      <div class="">
+        <button type="submit" class="btn btn-success btn-lg">Envoyer</button>
+      </div>
+    </form>
+  </div>
+
+  <br/><br/><br/><br/><br/><br/>
+
+  <!-- RESET PASSWORD -->
+  <div class="container" style="width: 28rem;">
+    <form>
+      <div class="text-center">
+        <img src="https://i.etsystatic.com/16964958/r/il/9d6714/1563984079/il_fullxfull.1563984079_pebe.jpg" alt="logo_Eventfrite" width="50px" height="50px" />
+        <h1>Nouveau mot de passe</h1>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Nouveau mot de passe</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Confirmation du mot de passe</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      </div>
+      <div class="">
+        <button type="submit" class="btn btn-success btn-lg">Modifier</button>
+      </div>
+    </form>
+  </div>
+
+  <br/><br/><br/><br/><br/><br/>
+
 </body>
 </html>
