--- a/banner.html
+++ b/banner.html
@@ -7,6 +7,26 @@
 </head>
 
 <body>
-  <h1>Event<span class="yellow">frite</span> UI kit</h1>
+  <h1>Event<span class="yellow">frite</span> banners</h1>
+
+  <!-- LITTLE BANNER -->
+  <div class="jumbotron jumbotron-fluid party_background">
+    <div class="container text-light">
+      <h1 class="display-4">Event<span class="yellow">frite</span></h1>
+      <p class="lead">Organize your events!</p>
+    </div>
+  </div>
+
+  <!-- BIG BANNER -->
+  <div class="jumbotron jumbotron-fluid drink_background jumb-lg">
+    <div class="transparent">
+      <div class="container text-light">
+        <br/><br/>
+        <h1 class="display-4">Event<span class="yellow">frite</span></h1>
+        <p class="lead">Organize your events!</p>
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
