better files + cards done

--- a/cards.html
+++ b/cards.html
@@ -3,10 +3,130 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
-  <title>Eventfrite UI Kit</title>
+  <title>Eventfrite Cards</title>
 </head>
 
 <body>
-  <h1>Event<span class="yellow">frite</span> UI kit</h1>
+  <h1><a href="index.html" class="text-dark">Event<span class="yellow">frite</span></a> cards &#x1f447</h1>
+  <div class="container">
+  
+    <!-- EVENT CARDS -->
+    <h2>Cartes d'évènements</h2><br/>
+    <div class="flexbox-section">
+      <!-- EVENT CARD -->
+      <div class="card mb-4 ml-2" style="max-width: 45em;">
+        <img class="card-img-top" src="https://images.pexels.com/photos/2827374/pexels-photo-2827374.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">You're Welcome !</h5>
+          <p class="card-text">Make a trip and join me at this date !</p>
+          <a href="#" class="btn btn-primary">Participer</a>
+        </div>
+      </div>
+      <!-- EVENT CARD -->
+      <div class="card mb-4 ml-2" style="max-width: 45em;">
+        <img class="card-img-top" src="https://images.pexels.com/photos/3751391/pexels-photo-3751391.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Road trip</h5>
+          <p class="card-text">3 places restantes pour des personnes qui aiment s'éclater !</p>
+          <a href="#" class="btn btn-primary">Participer</a>
+        </div>
+      </div>    
+    </div>
+    <div class="flexbox-section">
+      <!-- EVENT CARD -->
+      <div class="card mb-4 ml-2" style="max-width: 45em;">
+        <img class="card-img-top" src="https://images.pexels.com/photos/2561628/pexels-photo-2561628.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Marche pour le climat</h5>
+          <p class="card-text">Besoin d'aide pour sauver le monde ! Venez nombreux</p>
+          <a href="#" class="btn btn-primary">Participer</a>
+        </div>
+      </div>
+      <!-- EVENT CARD -->
+      <div class="card mb-4 ml-2" style="max-width: 45em;">
+        <img class="card-img-top" src="https://images.pexels.com/photos/3131971/pexels-photo-3131971.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Marche pour le climat</h5>
+          <p class="card-text">Besoin d'aide pour sauver le monde ! Venez nombreux</p>
+          <a href="#" class="btn btn-primary">Participer</a>
+        </div>
+      </div>
+    </div>
+
+    <br/><br/><br/><br/><br/><br/>  
+    
+    <!-- USER PROFILE CARD -->
+    <h2>Cartes de Profils d'utilisateurs</h2><br/>
+    <div class="profile-card mb-4">
+      <div>
+        <img src="https://images.pexels.com/photos/1435517/pexels-photo-1435517.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260">
+      </div>
+      <div class="margin-left">
+        <h4>Johnson David</h4>
+        <p>32 years old</p>
+        <p>"My life is amazing ;)"</p>
+        <a class="btn btn-primary" href="#">Voir le profil</a>
+      </div>
+    </div>
+    <div class="profile-card mb-4">
+      <div>
+        <img src="https://i.redd.it/p5opqwzcpc7x.jpg">
+      </div>
+      <div class="margin-left">
+        <h4>Mr.Poopy ****</h4>
+        <p>?? years old</p>
+        <p>"Je me suis fait tirer dessus mais j'ai survécu."</p>
+        <a class="btn btn-primary" href="#">Voir le profil</a>
+      </div>
+    </div>
+
+
+    <br/><br/><br/><br/><br/><br/>  
+
+    <!-- USER LIST CARD -->
+    <h2>Carte Liste d'utilisateurs</h2><br/>
+    <div class="card-border">
+      <h6 class="border-bottom border-gray pb-2 mb-0">Participants</h6>
+      <div class="media text-muted pt-3">
+        <img class="mr-2 rounded users_list_card_image"  data-holder-rendered="true">
+        <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+          <strong class="d-block text-gray-dark">@username</strong>
+          Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+        </p>
+      </div>
+      <div class="media text-muted pt-3">
+        <img class="mr-2 rounded users_list_card_image" data-holder-rendered="true">
+        <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+          <strong class="d-block text-gray-dark">@username</strong>
+          Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+        </p>
+      </div>
+      <div class="media text-muted pt-3">
+        <img class="mr-2 rounded users_list_card_image" data-holder-rendered="true">
+        <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+          <strong class="d-block text-gray-dark">@username</strong>
+          Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+        </p>
+      </div>
+      <small class="d-block text-right mt-3">
+        <a href="#">All updates</a>
+      </small>
+    </div>
+
+    <br/><br/><br/><br/><br/><br/>
+
+    <!-- CITIES LIST CARD -->
+    <h2>Carte Liste de villes</h2><br/>
+    <div class="card" style="width: 18rem;">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Paris</li>
+        <li class="list-group-item">London</li>
+        <li class="list-group-item">Vestibulum</li>
+      </ul>
+    </div>
+
+    <br/><br/><br/><br/><br/><br/>
+  
+  </div> <!-- end of div container -->
 </body>
 </html>
