--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li><a href="footer.html">Footer</a></li><br/>
     <li><a href="authentication_form.html">Authenticate</a></li><br/>
     <li><a href="banner.html">Banners</a></li><br/>
-    <li><a href="navbar.html">Navbar</a></li><br/>
+    <li><a href="cards.html">Cards</a></li><br/>
     <li><a href="navbar.html">Navbar</a></li><br/>
   </ul>
 
