--- a/banner.html
+++ b/banner.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
-  <title>Eventfrite UI Kit</title>
+  <title>Eventfrite Banners</title>
 </head>
 
 <body>
-  <h1>Event<span class="yellow">frite</span> banners</h1>
+  <h1><a href="index.html" class="text-dark">Event<span class="yellow">frite</span></a> banners &#x1f447</h1>
 
   <!-- LITTLE BANNER -->
   <div class="jumbotron jumbotron-fluid party_background">
