--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
-  <title>Eventfrite UI Kit</title>
+  <title>Eventfrite Footer</title>
 </head>
 
 <body>
