--- a/comment.html
+++ b/comment.html
@@ -7,6 +7,38 @@
 </head>
 
 <body>
-  <h1>Event<span class="yellow">frite</span> UI kit</h1>
+  <h1><a href="index.html" class="text-dark">Event<span class="yellow">frite</span></a> commentaires &#x1f447</h1>
+
+  <div class="container">
+    <div class="my-3 p-3 bg-white rounded box-shadow">
+        <h6 class="border-bottom text-primary border-gray pb-2 mb-0">Commentaires</h6>
+        <div class="media  pt-3">
+          <img data-src="#" class="mr-2 rounded users_list_card_image" src="https://i.ytimg.com/vi/7AWvFMDkOLo/hqdefault.jpg" data-holder-rendered="true" style="width: 32px; height: 32px;">
+          <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+            <strong class="d-block text-gray-dark">Alfred - 2020/02/25 15h12</strong>
+            Truc de ouf tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+          </p>
+        </div>
+        <div class="media  pt-3">
+          <img data-src="#" class="mr-2 rounded users_list_card_image" src="https://comicvine1.cbsistatic.com/uploads/original/14/144196/4088664-3129467400-34164.jpg" data-holder-rendered="true" style="width: 32px; height: 32px;">
+          <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+            <strong class="d-block text-gray-dark">ThorDu67 - 2020/02/25 15h19</strong>
+            Pas d'accord mais chacun son délire... Pas d'accord mais chacun son délire... Pas d'accord mais chacun son délire... Pas d'accord mais chacun son délire... Pas d'accord mais chacun son délire... On dirait que je suis un rageux qui spamme mais pas du tout, tu te trompes.
+          </p>
+        </div>
+        <div class="media  pt-3">
+          <img data-src="#" class="mr-2 rounded users_list_card_image" src="https://www.nationalgeographic.com/content/dam/photography/photos/000/801/80189.ngsversion.1467253985692.adapt.1900.1.jpg" data-holder-rendered="true" style="width: 32px; height: 32px;">
+          <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+            <strong class="d-block text-gray-dark">Beber-L'antilope25 - 2020/02/25 15h23</strong>
+            SACHEZ LE nous somme victimes d'une manipulation de l'état le coronavirus forme des zombies on nous le cache soyez prets mes freres et soeurs soyez prets garde a vous preparez vous aux derniers temps
+          </p>
+        </div>
+        <div class="form-group mt-3">
+              <label for="exampleTextarea" class="text-primary">Laisser un commentaire </label>
+              <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+        </div>
+        <p class="center"><a class="btn btn-primary" href="#">Commenter</a></p>
+      </div>
+  </div>
 </body>
 </html>
