--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <li><a href="authentication_form.html">Authenticate</a></li><br/>
     <li><a href="banner.html">Banners</a></li><br/>
     <li><a href="cards.html">Cards</a></li><br/>
-    <li><a href="navbar.html">Navbar</a></li><br/>
+    <li><a href="comment.html">Comment</a></li><br/>
   </ul>
 
 </body>
