--- a/authentication_form.html
+++ b/authentication_form.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1><a href="index.html" class="text-dark">Event<span class="yellow">frite</span></a> authentication forms &#x1f447</h1><br/>
+  <h1><a href="index.html" class="text-dark">Event<span class="yellow">frite</span></a> formulaires d'authentification &#x1f447</h1><br/>
 
   <!-- LOG IN -->
   <div class="container" style="width: 28rem;">
