--- a/banner.html
+++ b/banner.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1><a href="index.html" class="text-dark">Event<span class="yellow">frite</span></a> banners &#x1f447</h1>
+  <h1><a href="index.html" class="text-dark">Event<span class="yellow">frite</span></a> bannières &#x1f447</h1>
 
   <!-- LITTLE BANNER -->
   <div class="jumbotron jumbotron-fluid party_background">
