--- a/cards.html
+++ b/cards.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1><a href="index.html" class="text-dark">Event<span class="yellow">frite</span></a> cards &#x1f447</h1>
+  <h1><a href="index.html" class="text-dark">Event<span class="yellow">frite</span></a> cartes &#x1f447</h1>
 
   <div class="container">
 
