show_content page done

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <li><a href="banner.html">Banners</a></li><br/>
     <li><a href="cards.html">Cards</a></li><br/>
     <li><a href="comment.html">Comments</a></li><br/>
+    <li><a href="show_content.html">Content</a></li><br/>
   </ul>
 
 </body>
