show element page done

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <li><a href="cards.html">Cards</a></li><br/>
     <li><a href="comment.html">Comments</a></li><br/>
     <li><a href="show_content.html">Content</a></li><br/>
+    <li><a href="show_element.html">Element</a></li><br/>
   </ul>
 
 </body>
