--- a/show_element.html
+++ b/show_element.html
@@ -3,10 +3,50 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
-  <title>Eventfrite UI Kit</title>
+  <title>Eventfrite Element</title>
 </head>
 
 <body>
-  <h1>Event<span class="yellow">frite</span> UI kit</h1>
+  <h1><a href="index.html" class="text-dark">Event<span class="yellow">frite</span></a> - Showpage d'un élément &#x1f447</h1><br/>
+
+  <!-- PRESENT AN ELEMENT -->
+  <div class="container">
+      <div class="flexbox-section card-border-2">
+          <div class="show-element">
+            <img src="https://images.unsplash.com/photo-1461344577544-4e5dc9487184?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="logo">
+          </div>
+          <div class="margin-left">
+            <br/><br/>
+            <h1>Atelier</h1><br/>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente reiciendis provident ipsa officiis ab numquam sequi et esse aut eligendi, reprehenderit ducimus optio, consequuntur recusandae dicta velit sed commodi incidunt.</p>
+          </div>
+      </div>
+      <br/>
+      <div class="flexbox-section card-border-2">
+        <div class="show-element">
+          <img src="https://images.unsplash.com/photo-1510070009289-b5bc34383727?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="logo">
+        </div>
+        <div class="margin-left">
+          <br/><br/>
+          <h1>WorkingSpace</h1><br/>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente reiciendis provident ipsa officiis ab numquam sequi et esse aut eligendi, reprehenderit ducimus optio, consequuntur recusandae dicta velit sed commodi incidunt.</p>
+        </div>
+      </div>
+      <br/>
+      <div class="flexbox-section card-border-2">
+        <div class="show-element">
+          <img src="https://images.unsplash.com/photo-1499618838676-f1a9bc076843?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="logo">
+        </div>
+        <div class="margin-left">
+          <br/><br/>
+          <h1>Moment convivial</h1><br/>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente reiciendis provident ipsa officiis ab numquam sequi et esse aut eligendi, reprehenderit ducimus optio, consequuntur recusandae dicta velit sed commodi incidunt.</p>
+        </div>
+      </div>
+      <br/>
+    </div> <!-- end of div container -->
+
+    <br/>
+
 </body>
 </html>
