change comments text

--- a/comment.html
+++ b/comment.html
@@ -16,21 +16,21 @@
           <img data-src="#" class="mr-2 rounded users_list_card_image" src="https://i.ytimg.com/vi/7AWvFMDkOLo/hqdefault.jpg" data-holder-rendered="true" style="width: 32px; height: 32px;">
           <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
             <strong class="d-block text-gray-dark">Alfred - 2020/02/25 15h12</strong>
-            Truc de ouf tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+            Mauris condimentum nibh, ut fermentum massa justo sit amet risus.
           </p>
         </div>
         <div class="media  pt-3">
           <img data-src="#" class="mr-2 rounded users_list_card_image" src="https://comicvine1.cbsistatic.com/uploads/original/14/144196/4088664-3129467400-34164.jpg" data-holder-rendered="true" style="width: 32px; height: 32px;">
           <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
             <strong class="d-block text-gray-dark">ThorDu67 - 2020/02/25 15h19</strong>
-            Pas d'accord mais chacun son délire... Pas d'accord mais chacun son délire... Pas d'accord mais chacun son délire... Pas d'accord mais chacun son délire... Pas d'accord mais chacun son délire... On dirait que je suis un rageux qui spamme mais pas du tout, tu te trompes.
+            Nulla nulla massa, euismod sed sodales id.
           </p>
         </div>
         <div class="media  pt-3">
           <img data-src="#" class="mr-2 rounded users_list_card_image" src="https://www.nationalgeographic.com/content/dam/photography/photos/000/801/80189.ngsversion.1467253985692.adapt.1900.1.jpg" data-holder-rendered="true" style="width: 32px; height: 32px;">
           <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
             <strong class="d-block text-gray-dark">Beber-L'antilope25 - 2020/02/25 15h23</strong>
-            SACHEZ LE nous somme victimes d'une manipulation de l'état le coronavirus forme des zombies on nous le cache soyez prets mes freres et soeurs soyez prets garde a vous preparez vous aux derniers temps
+            Suspendisse lobortis aliquam iaculis. Fusce congue ante vel efficitur mollis. Cras ornare.
           </p>
         </div>
         <div class="form-group mt-3">
