--- a/navbar.html
+++ b/navbar.html
@@ -12,7 +12,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Event<span class="yellow">frite</span></a>
+    <a class="navbar-brand" href="index.html">Event<span class="yellow">frite</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -36,7 +36,7 @@
   </nav>
 
   <br/>
-  <h1>Event<span class="yellow">frite</span> Navbar &#x1F446;</h1>
+  <h1><a href="index.html" class="text-dark">Event<span class="yellow">frite</span></a> Navbar &#x1F446;</h1>
  	
 </body>
 </html>
