--- a/cards.html
+++ b/cards.html
@@ -47,8 +47,8 @@
       <div class="card mb-4 ml-2" style="max-width: 45em;">
         <img class="card-img-top" src="https://images.pexels.com/photos/3131971/pexels-photo-3131971.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Marche pour le climat</h5>
-          <p class="card-text">Besoin d'aide pour sauver le monde ! Venez nombreux</p>
+          <h5 class="card-title">Soirée films</h5>
+          <p class="card-text">Petite ambiance sympathique</p>
           <a href="#" class="btn btn-primary">Participer</a>
         </div>
       </div>
@@ -76,7 +76,7 @@
       <div class="margin-left">
         <h4>Mr.Poopy ****</h4>
         <p>?? years old</p>
-        <p>"Je me suis fait tirer dessus mais j'ai survécu."</p>
+        <p>"I got shot but I survived."</p>
         <a class="btn btn-primary" href="#">Voir le profil</a>
       </div>
     </div>
